# android-app-debug-mcp

./: .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
scripts/: android_ops.py  emulator.py  logcat_writer.py  observe.py  onboard.py  paths.py  server.py  session.py
skills/android-app-debug-mcp/: SKILL.md
